# 01-rcli

./: Cargo.toml  README.md  cliff.toml  deny.toml
.github/workflows/: build.yml
src/: lib.rs  opts.rs  process.rs
