[package]
name = "rcli"
version = "0.1.0"
edition = "2021"
license =  "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
cfg-if = "1.0.0"
clap = { version = "4.5.28", features = ["derive"] }
csv = "1.3.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
toml = "0.8.20"
[features]
collect = []
